<resources>
    <string name="app_name">Minha Biblia Católica</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_Buscar">Buscar</string>
    <string name="btCapAvancar">Avançar&gt;&gt;</string>
    <string name="btCapVoltar">&lt;&lt; Voltar</string>
    <string name="salvar">Salvar</string>
    <string name="anotacoes">Anotações</string>
    <string name="favoritos">Favoritos</string>
    <string name="configuracoes">Configurações</string>
    <string name="help">Ajuda</string>
    <string name="selectTema">Selecione Tema:</string>
    <string name="selectSizeFonteBar">Selecione o tamanho da fonte:</string>
    <string name="temaClaro">Fundo Claro</string>
    <string name="Ok">Ok</string>
    <string name="temaEscuro">Fundo Escuro</string>
    <string name="help_PrimeirosPassos">Primeiros Passos</string>
    <string name="help1">1 - Icone do aplicativo serve para voltar para o menu principal; \n 2 - Indice de livros da biblia; \n 3 - indice de capitul; \n 4 - botão Menu;</string>
    <string name="help2">7 - Menu anotações abre a lista de anotações; \n 8 - Menu de Favoritos abre a lista de favoritos \n 9 - Menu MultSeleção para utilizar essa opção o usuario deve clicar duas vezes em cada verciculo para selecionar; \n 10 - Mostra os verciculos que foram selecionados;</string>
    <string name="help3">11 - Botão de compartilhar o texto selecionado; \n 12 - Botão de salvar o seu verciculo favorito; \n 13 - Botão de criar comentario do envia seu comentario para as anotações</string>
    <string name="help4">14 - Espaço para anotações você pode digitar seu comentario; \n 15 - Botão para salvar sua anotação; \n 16 - Botão para abilitar a edição de uma nota que já foi salva; \n 17 - Botão para compartilhar sua anotação</string>
    <string name="help5">18 - Segure o item da lista e irá abrir uma caixa de opção se deseja apagar o item SIM ou NÃO</string>
    <string name="about">Sobre</string>
    <string name="exit">Sair</string>
    <string name="deletbanco">Apagar tudo</string>
    <string name="Tema">Tema:</string>
    <string name="aboutDatos">Aplicativo \n<b>Minha Bíblia Católica  \nVersão - 1.8 </b> \n \nCriado por \n<b>Cleiton Dantas</b> \n \n Tradução \n <b>Editora Ave Maria</b> \n \n <b>Textos obtidos em </b>\n Biblia Católica v10.chm \n \n<b>Contato: \n cyber_tronyk@hotmail.com </b>\n \n Nenhum aplicativo substitui a biblia impressa. \n Este aplicativo foi desenvolvido para que o usuario possa consultar a biblia em momentos em que a biblia impressa não estiver disponivel \n Nunca utilize aplicativos biblicos para missas ou celebrações </string>
    <string name="sair"><center><b>Gostaria de sair do app</b></center></string>
    <string name="paiNosso">Pai Nosso, que estais no Céu \nSantificado seja o Vosso Nome \nVenha a nós o Vosso Reino \nSeja feita a Vossa Vontade, \nAssim na Terra como no Céu \nO Pão-Nosso de cada dia nos daí hoje \nPerdoai-nos as nossas ofensas \nAssim como nós perdoamos a \nQuem nos tem ofendido \nE não nos deixeis cair em tentação \nMas livrai-nos do Mal. \n Amém</string>
    <string name="aveMaria">Ave-Maria, cheia de graça! \nO Senhor é convosco \nBendita sois vóis entre as mulheres \nE Bendito é o Fruto do vosso ventre, Jesus \nSanta Maria Mãe de Deus, \nRogai por nós os pecadores \nAgora e na hora de nossa morte. Amém</string>
	<string name="coroinha">(Inicio)\n“Dignai-Vos conceder-me que Vos louve, ó Virgem Sagrada, dai-me virtude contra os Vossos inimigos!” \n\nCredo 1X,\n\n(Repita está oração abaixo 3X)\n"Pai-Nosso,\nAve-Marias 4X \nGlória ao Pai \n\n(Fim)\n“Sob a Vossa proteção nos acolhemos, Santa Mãe de Deus; não desprezeis as nossa súplicas em nossa necessida-des; mas livrai-nos sempre de todos os perigos, ó Virgem Gloriosa e Bendita!”</string>
    <string-array name="spinner_Liv">
        <item>Gênesis</item>
        <item>Êxodo</item>
        <item>Levitico</item>
        <item>Números</item>
        <item>Deuteronomio</item>
        <item>Josué</item>
        <item>Juizes</item>
        <item>Rute</item>
        <item>1º Samuel</item>
        <item>2º Samuel</item>
        <item>1º Reis</item>
        <item>2º Reis</item>
        <item>1º Crônicas</item>
        <item>2º Crônicas</item>
        <item>Esdras</item>
        <item>Neemias</item>
        <item>Tobias</item>
        <item>Judite</item>
        <item>Ester</item>
        <item>1º Macabeus</item>
        <item>2º Macabeus</item>
        <item>Jó</item>
        <item>Salmos</item>
        <item>Provérbios</item>
        <item>Eclesiastes</item>
        <item>Cântico dos Cânticos</item>
        <item>Sabedoria</item>
        <item>Eclesiástico</item>
        <item>Isaías</item>
        <item>Jeremias</item>
        <item>Lamentações</item>
        <item>Baruc</item>
        <item>Ezequiel</item>
        <item>Daniel</item>
        <item>Oséias</item>
        <item>Joel</item>
        <item>Amós</item>
        <item>Abdias</item>
        <item>Jonas</item>
        <item>Miquéias</item>
        <item>Naum</item>
        <item>Habacuc</item>
        <item>Sofonias</item>
        <item>Ageu</item>
        <item>Zacarias</item>
        <item>Malaquias</item>
        <item>Ev. São Mateus</item>
        <item>Ev. São Marcos</item>
        <item>Ev. São Lucas</item>
        <item>Ev. São João</item>
        <item>Atos dos Apóstolos</item>
        <item>Romanos</item>
        <item>1º Coríntios</item>
        <item>2º Coríntios</item>
        <item>Gálatas</item>
        <item>Efésios</item>
        <item>Filipenses</item>
        <item>Colossenses</item>
        <item>1º Tessalonicenses</item>
        <item>2º Tessalonicenses</item>
        <item>1º Timóteo</item>
        <item>2º Timóteo</item>
        <item>Tito</item>
        <item>Filêmon</item>
        <item>Hebreus</item>
        <item>São Tiago</item>
        <item>1º São Pedro</item>
        <item>2º São Pedro</item>
        <item>1º São João</item>
        <item>2º São João</item>
        <item>3º São João</item>
        <item>São Judas</item>
        <item>Apocalipse</item>
    </string-array>
    <string-array name="spinner_01">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    <string-array name="spinner_02">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
    </string-array>
    <string-array name="spinner_03">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
    </string-array>
    <string-array name="spinner_04">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
    </string-array>
    <string-array name="spinner_05">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
    </string-array>
    <string-array name="spinner_06">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
</resources>