<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/QuinzeDp"
        android:paddingRight="@dimen/QuinzeDp" >

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/selectSizeFonteBar"
                android:textSize="@dimen/Quinze" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/QuinzeDp"
                android:paddingRight="@dimen/QuinzeDp" />

            <LinearLayout
                android:id="@+id/linearRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/selectTema"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioGroup
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioButtonClaro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temaClaro" />

                    <RadioButton
                        android:id="@+id/radioButtonEscuro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temaEscuro" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/deletBanco"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/deletbanco" />

        <Button
            android:id="@+id/btAbout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/about" />
    </LinearLayout>

</RelativeLayout>